Refactor: enhanced product construction with Builder pattern